--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -13,14 +13,16 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
+
     <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
         android:id="@+id/dotsIndicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="16dp"
-        app:dotsColor="@color/black"
-        app:selectedDotColor="@color/black"
-        app:dotsSize="8dp"
-        />
+        android:layout_marginBottom="20dp"
+        app:dotsColor="@color/md_theme_primaryContainer"
+        app:selectedDotColor="@color/md_theme_primary"
+        app:dotsSize="10dp"
+        app:dotsSpacing="8dp"
+        app:dotsCornerRadius="5dp" />
 </LinearLayout>
