--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -143,6 +143,14 @@
     <color name="md_theme_surfaceContainerHighest_highContrast">#C6C6CD</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="purple_primary">#7B1FA2</color>
+    <color name="purple_primary_end">#9C27B0</color>
+    <color name="pill_bg">#EDE1FF</color>      <!-- light lilac of fields -->
+    <color name="icon_bubble">#F3E9FF</color>  <!-- even lighter bubble -->
+    <color name="purple_700">#6200EE</color>
+</resources>
+
     <!-- Campus Theme Colors -->
     <color name="primary_blue">#2E86AB</color>
     <color name="primary_blue_dark">#1A5490</color>
