--- a/app/src/main/res/layout/item_month.xml
+++ b/app/src/main/res/layout/item_month.xml
@@ -1,21 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
-
-    <TextView
-        android:id="@+id/monthTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="January"
-        android:textSize="18sp"
-        android:paddingBottom="8dp"/>
-
-    <GridLayout
-        android:id="@+id/daysGrid"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <com.applandeo.materialcalendarview.CalendarView
+        android:id="@+id/monthCalendar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:columnCount="7"/>
-</LinearLayout>
+        android:layout_height="200dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
