--- a/app/src/main/res/layout/item_day_cell.xml
+++ b/app/src/main/res/layout/item_day_cell.xml
@@ -14,4 +14,12 @@
         android:textSize="16sp"
         android:background="@android:color/transparent" />
 
+    <View
+        android:id="@+id/eventIndicator"
+        android:layout_width="6dp"
+        android:layout_height="6dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/event_dot"
+        android:visibility="gone" />
+
 </LinearLayout>
