--- a/app/src/main/res/layout/item_day_cell.xml
+++ b/app/src/main/res/layout/item_day_cell.xml
@@ -11,6 +11,7 @@
         android:layout_height="40dp"
         android:gravity="center"
         android:textColor="@android:color/white"
+        android:fontFamily="@font/jakarta_regular"
         android:textSize="16sp"
         android:background="@android:color/transparent" />
 
