--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -21,16 +21,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <ImageView
-                android:id="@+id/back_arrow"
-                android:layout_width="26dp"
-                android:layout_height="26dp"
-                android:src="@drawable/left_arrow_icon"
-                android:contentDescription="@string/back"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginStart="8dp" />
+
             <TextView
                 android:id="@+id/app_title"
                 android:layout_width="wrap_content"
@@ -45,6 +36,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:gravity="center" />
+
             <ImageView
                 android:id="@+id/settings_icon"
                 android:layout_width="26dp"
@@ -57,11 +49,11 @@
                 android:background="?android:attr/selectableItemBackground"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginEnd="8dp" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.appcompat.widget.Toolbar>
 
-    <ScrollView
-        android:id="@+id/profile_scrollview"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="16dp"
@@ -70,136 +62,175 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
+
         <LinearLayout
+            android:id="@+id/profile_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <!-- Profile image -->
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/profile_image"
-                android:layout_width="96dp"
-                android:layout_height="96dp"
-                android:src="@drawable/profile_icon"
-                android:contentDescription="@string/alex_johnson"
-                app:civ_border_width="2dp"
-                app:civ_border_color="#FF000000"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="24dp" />
-            <!-- User role -->
-            <TextView
-                android:id="@+id/user_id"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/user_role"
-                android:textSize="16sp"
-                android:fontFamily="@font/jakarta_medium"
-                android:textColor="@android:color/darker_gray"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="4dp" />
-            <!-- User info header -->
-            <TextView
-                android:id="@+id/user_info_header"
-                android:layout_gravity="center"
-                android:fontFamily="@font/jakarta_extra_bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/user_information"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:textColor="?attr/colorOnSurface"
-                android:layout_marginTop="24dp" />
 
             <LinearLayout
-                android:id="@+id/name_layout"
+                android:id="@+id/profile_header_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:background="@drawable/profile_text"
-                android:padding="16dp"
-                android:layout_marginTop="16dp">
+                android:gravity="center">
 
-                <TextView
+                <androidx.cardview.widget.CardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Name"
-                    android:textSize="15sp"
-                    android:fontFamily="@font/jakarta_bold"
-                    android:layout_marginBottom="4dp" />
+                    app:cardCornerRadius="30dp"
+                    app:cardElevation="4dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="16dp">
 
-                <EditText
-                    android:id="@+id/name_input"
-                    android:layout_width="match_parent"
+                    <!-- Profile image -->
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:id="@+id/profile_image"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:padding="0dp"
+                        android:contentDescription="@string/alex_johnson"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/profile_image">
+                    </com.google.android.material.imageview.ShapeableImageView>
+                </androidx.cardview.widget.CardView>
+
+
+                <!-- User role -->
+                <TextView
+                    android:id="@+id/user_id"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:text="@string/alex_johnson"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/jakarta_bold"
-                    android:textColor="?attr/colorOnSurface"
-                    android:textColorHint="@android:color/darker_gray"
-                    android:inputType="textPersonName" />
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="4dp"
+                    android:fontFamily="@font/jakarta_medium"
+                    android:text="@string/user_role"
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="20sp" />
+
             </LinearLayout>
-            <!-- Email Field -->
+
             <LinearLayout
-                android:id="@+id/email_layout"
+                android:id="@+id/user_info_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:background="@drawable/profile_text"
-                android:padding="16dp"
-                android:layout_marginTop="8dp">
+                android:layout_marginTop="24dp">
 
+                <!-- User info header -->
                 <TextView
+                    android:id="@+id/user_info_header"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Email"
-                    android:textSize="15sp"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="16dp"
                     android:fontFamily="@font/jakarta_bold"
-                    android:layout_marginBottom="4dp" />
+                    android:text="User Information"
+                    android:textColor="?attr/colorOnSurface"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
-                <EditText
-                    android:id="@+id/email_input"
+                <!-- Name Field -->
+                <LinearLayout
+                    android:id="@+id/name_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:text="@string/email"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/jakarta_bold"
-                    android:textColor="?attr/colorOnSurface"
-                    android:textColorHint="@android:color/darker_gray"
-                    android:inputType="textEmailAddress" />
-            </LinearLayout>
-            <!-- Course Field -->
-            <LinearLayout
-                android:id="@+id/major_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:background="@drawable/profile_text"
-                android:padding="16dp"
-                android:layout_marginTop="8dp">
+                    android:orientation="vertical"
+                    android:background="@drawable/profile_text"
+                    android:padding="16dp"
+                    android:layout_marginTop="8dp">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Course"
-                    android:textSize="15sp"
-                    android:fontFamily="@font/jakarta_bold"
-                    android:layout_marginBottom="4dp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Name"
+                        android:textSize="15sp"
+                        android:fontFamily="@font/jakarta_bold"
+                        android:layout_marginBottom="4dp" />
 
-                <EditText
-                    android:id="@+id/course_input"
+                    <TextView
+                        android:id="@+id/name_input"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:text="@string/alex_johnson"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/jakarta_bold"
+                        android:textColor="?attr/colorOnSurface"
+                        android:textColorHint="@android:color/darker_gray"
+                        android:inputType="textPersonName" />
+
+                </LinearLayout>
+
+                <!-- Email Field -->
+                <LinearLayout
+                    android:id="@+id/email_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:text="@string/course"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/jakarta_bold"
-                    android:textColor="?attr/colorOnSurface"
-                    android:textColorHint="@android:color/darker_gray"
-                    android:inputType="text" />
+                    android:orientation="vertical"
+                    android:background="@drawable/profile_text"
+                    android:padding="16dp"
+                    android:layout_marginTop="8dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Email"
+                        android:textSize="15sp"
+                        android:fontFamily="@font/jakarta_bold"
+                        android:layout_marginBottom="4dp" />
+
+                    <TextView
+                        android:id="@+id/email_input"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:text="@string/email"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/jakarta_bold"
+                        android:textColor="?attr/colorOnSurface"
+                        android:textColorHint="@android:color/darker_gray"
+                        android:inputType="textEmailAddress" />
+
+                </LinearLayout>
+
+                <!-- Course Field -->
+                <LinearLayout
+                    android:id="@+id/major_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:background="@drawable/profile_text"
+                    android:padding="16dp"
+                    android:layout_marginTop="8dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Course"
+                        android:textSize="15sp"
+                        android:fontFamily="@font/jakarta_bold"
+                        android:layout_marginBottom="4dp" />
+
+                    <TextView
+                        android:id="@+id/course_input"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:text="@string/course"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/jakarta_bold"
+                        android:textColor="?attr/colorOnSurface"
+                        android:textColorHint="@android:color/darker_gray"
+                        android:inputType="text" />
+
+                </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
-    </ScrollView>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
